
2017-xx-xx  2.8.1 (not released)
--------------------------------------------------------------------------------
IMP         Added more information to system diagnosis string.
IMP         Improved error tracking during compilation generation.
IMP  #31, #33 Reduced memory footprint of compilation.
IMP  #34    Added .deb package for Linux.

2017-09-03  2.8.0
--------------------------------------------------------------------------------
ADD  #27    Introduced persistent user settings.
ADD  #26    Introduced new version check on application startup.
ADD         Introduced welcome dialog to be shown after upgrades.
IMP         Made sound effect start time spinner editable.
IMP         Improved directions in error dialog.
FIX         Fixed resizing issue in debug log.


2017-07-30  2.7.1
--------------------------------------------------------------------------------
FIX  #25    Sound effect preview prevents software from quitting properly.


2017-07-30  2.7.0
--------------------------------------------------------------------------------
ADD  #6     Add possibility to include sound effects.
FIX  #22    Preview scales badly.
FIX  #23    Temporary compilation file is not deleted on Windows.


2017-02-07  2.6.4
--------------------------------------------------------------------------------
ADD  #20    Check update dialog contains link to latest software version download.
IMP         Adapted version check URL to new server address.
FIX  #19    Changing/writing BPM not possible.
FIX  #21    Software sometimes does not terminate after quitting.


2016-09-23  2.6.3
--------------------------------------------------------------------------------
IMP         Added more information to the debug log and update browser string.
IMP         Increased application heap size a bit.
IMP         Add sound menu entries now also disabled during compilation.
FIX  #18    Heap space exception for longer compilations under Windows and Linux.


2016-08-18  2.6.2