@@ -7,6 +7,8 @@ IMP         Added more information to system diagnosis string.
 IMP         Improved error tracking during compilation generation.
 IMP  #31, #33 Reduced memory footprint of compilation.
 IMP  #34    Added .deb package for Linux.
+IMP  #36    Added command line switch ('-c') to clear user settings.
+
 
 2017-09-03  2.8.0
 --------------------------------------------------------------------------------
